Correct contrast of buttons; Correct node

--- a/src/Components/Play/Stats/Stats.scss
+++ b/src/Components/Play/Stats/Stats.scss
@@ -38,6 +38,7 @@
 
     .buttonHome{
         background: blueviolet;
+        color: rgba(255, 255, 255, .9);
         &:hover{
             background: #7d18db;
         }
